--- a/Daily.css
+++ b/Daily.css
@@ -1,7 +1,9 @@
+/*
 *{
 	float: center;
 	background: antiquewhite;
 }
+*/
 
 button {
 	background: pink;
@@ -11,7 +13,8 @@ button {
 	
 }
 
-input[type=text] {
+/*input[type=text]*/
+#input-desc{
   width: 50%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -25,3 +28,206 @@ body{
 	margin-top: 40px;
 }
 
+/*
+#houre{
+	 width: 15px;
+*/
+/*
+  padding: 12px 20px;
+  margin: 8px 0;
+*/
+/*  box-sizing: border-box;*/
+/*
+  height: 15px
+}
+*/
+
+h1{
+	text-align: left;
+	font-size: 50px 
+}
+/*
+.left {
+  left: 0;
+}
+
+.right {
+  right: 0;
+}
+*/
+
+button {
+	color:white;
+  background-color: darkred;
+  border-radius: 18px;
+  height: 40px;
+  width: 100px;
+  outline: none;
+	
+}
+
+#input-task {
+  float: center;
+  display: block;
+  height: 20px;
+  width: 15%;
+  border: 2px solid red;
+  padding: 10px;
+  border-radius: 2em 1em 4em / 0.5em 3em;
+}
+#input-desc{
+	 float: center;
+  display: block;
+  height: 70px;
+  width: 80%;
+  border: 2px solid red;
+  padding: 10px;
+  border-radius: 2em 1em 4em / 0.5em 3em;
+}
+
+
+label {
+  float: center;
+/*    display: block;*/
+    margin-bottom: 20px;
+}
+
+
+
+body{
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Paper-notes.svg/768px-Paper-notes.svg.png');
+  background-repeat:no-repeat;
+  background-size: 100% 100%;
+  background-attachment: fixed;
+}
+
+#list{
+/*     display: inline;*/
+	  float: left;
+    color: black;
+  	border: 3px dotted gray;
+    margin:7px;
+    padding:7px;
+	font-size: 18px;
+	width: 80%;
+}
+/*
+#divlist{
+	text-align: 
+}
+*/
+
+.taskc{
+	font-size: 25px;
+}
+
+/*
+.descc{
+	font-size: 125px;
+}
+*/
+
+#done {
+		color:white;
+  background-color: darkred;
+  border-radius: 18px;
+  height: 40px;
+  width: 70px;
+  outline: none;
+	
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*the list element are not visable */
+/*
+.dropelement {
+
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropelement a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+	background-color: #ddd;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/*Time button styling*/
+/*
+.dropbtn {
+  background-color: #3498DB;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+
+
+/**
+.dropbtn {
+  background-color: #3498DB;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
+*/
